# fira_ws

realsense/: package.xml  setup.py
realsense/launch/: visual_launch.py
realsense/realsense/: 2d_plane.py  box_edge_detect.py  color_detect.py  color_range.py  depth_calculate.py  interface.py  interface_robot.py  paddleorc.py  realsense_read.py  visiual.py
tb4_arm_ros2/: dynamixel_control.repos
tb4_arm_ros2/python_moveit2/: package.xml  setup.cfg  setup.py
tb4_arm_ros2/python_moveit2/python_moveit2/: arm_control.py
tb4_arm_ros2/small_arm_moveit_config/config/: moveit.rviz
tb4_arm_ros2/small_arm_moveit_cpp/: CMakeLists.txt
tb4_arm_ros2/small_arm_moveit_cpp copy/src/: ee_pose_in_base.cpp  next_step.cpp  pose_goal.cpp  test.cpp
tb4_arm_ros2/small_arm_moveit_cpp/launch/: motion_planning.launch.py
tb4_arm_ros2/small_arm_moveit_cpp/src/: auto_pose_goal.cpp  ee_pose_in_base.cpp  eye_hand_pose.cpp  gripper_joint_value.cpp  gripper_open.cpp  joint_goal.cpp  named_goal.cpp
